--- a/Tratamiento curvas.ipynb
+++ b/Tratamiento curvas.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importar librerias necesarias"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,7 +15,17 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import openpyxl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lectura de los datos\n",
+    "\n",
+    "Tengo toda la información de curvas de medida en dos ficheros excel, cada uno de los ficheros tiene varias pestañas por lo que tengo que unir toda la información en un solo data frame."
    ]
   },
   {
@@ -17,158 +34,152 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-ddb4bea9bd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mexcel_document\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopenpyxl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_workbook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/Cups2017.xlsx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/openpyxl/reader/excel.py\u001b[0m in \u001b[0;36mload_workbook\u001b[0;34m(filename, read_only, keep_vba, data_only, guess_types, keep_links)\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0mws\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_rels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m             \u001b[0mws_parser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWorkSheetParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mws\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshared_strings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 248\u001b[0;31m             \u001b[0mws_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mrels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/openpyxl/reader/worksheet.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    126\u001b[0m             \u001b[0mtag_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0melement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtag_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdispatcher\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 128\u001b[0;31m                 \u001b[0mdispatcher\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtag_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melement\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    129\u001b[0m                 \u001b[0melement\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mtag_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mproperties\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/openpyxl/reader/worksheet.py\u001b[0m in \u001b[0;36mparse_row\u001b[0;34m(self, row)\u001b[0m\n\u001b[1;32m    286\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcell\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msafe_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCELL_TAG\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 288\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_cell\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/openpyxl/reader/worksheet.py\u001b[0m in \u001b[0;36mparse_cell\u001b[0;34m(self, element)\u001b[0m\n\u001b[1;32m    220\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mdata_type\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'n'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    221\u001b[0m                 \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_cast_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 222\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0mis_date_format\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcell\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumber_format\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    223\u001b[0m                     \u001b[0mdata_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'd'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    224\u001b[0m                     \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfrom_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/openpyxl/styles/styleable.py\u001b[0m in \u001b[0;36m__get__\u001b[0;34m(self, instance, cls)\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_style\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mStyleArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_style\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m164\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mBUILTIN_FORMATS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"General\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0mcoll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minstance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcollection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Leo el primer fichero excel\n",
+    "excel_document = openpyxl.load_workbook('./data/Cups2017.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print type(excel_document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>CUPS 22</th>\n",
-       "      <th>DAY</th>\n",
-       "      <th>HOUR</th>\n",
-       "      <th>SEASON</th>\n",
-       "      <th>VALUE</th>\n",
-       "      <th>TRANSP LOSS VALUE</th>\n",
-       "      <th>TRANSF LOSS VALUE</th>\n",
-       "      <th>FORECAST VALUE</th>\n",
-       "      <th>FORECAST TRANSP LOSS VALUE</th>\n",
-       "      <th>FORECASTE TRANSF LOSS VALUE</th>\n",
-       "      <th>PRIORITY</th>\n",
+       "      <th>--Cups20--</th>\n",
+       "      <th>--Line--</th>\n",
+       "      <th>--Fecha--</th>\n",
+       "      <th>--Hora--</th>\n",
+       "      <th>--Active--</th>\n",
+       "      <th>--Active With Transport Loss--</th>\n",
+       "      <th>--Active With Transform Loss--</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017</td>\n",
+       "      <td>ES0021000004654210GL</td>\n",
+       "      <td>0P</td>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>1</td>\n",
-       "      <td>ES0021000000472013PG0P</td>\n",
-       "      <td>16/01/2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,269</td>\n",
-       "      <td>0,342</td>\n",
-       "      <td>0,269</td>\n",
-       "      <td>0,492</td>\n",
-       "      <td>0,625</td>\n",
-       "      <td>0,492</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4.085</td>\n",
+       "      <td>5.22472</td>\n",
+       "      <td>4.085</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES0021000000472013PG0P</td>\n",
-       "      <td>16/01/2017</td>\n",
+       "      <td>ES0021000004654210GL</td>\n",
+       "      <td>0P</td>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,506</td>\n",
-       "      <td>0,637</td>\n",
-       "      <td>0,506</td>\n",
-       "      <td>0,391</td>\n",
-       "      <td>0,493</td>\n",
-       "      <td>0,391</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.757</td>\n",
+       "      <td>4.80896</td>\n",
+       "      <td>3.757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES0021000000472013PG0P</td>\n",
-       "      <td>16/01/2017</td>\n",
+       "      <td>ES0021000004654210GL</td>\n",
+       "      <td>0P</td>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,35</td>\n",
-       "      <td>0,436</td>\n",
-       "      <td>0,35</td>\n",
-       "      <td>0,343</td>\n",
-       "      <td>0,427</td>\n",
-       "      <td>0,343</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.930</td>\n",
+       "      <td>5.03040</td>\n",
+       "      <td>3.930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES0021000000472013PG0P</td>\n",
-       "      <td>16/01/2017</td>\n",
+       "      <td>ES0021000004654210GL</td>\n",
+       "      <td>0P</td>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,53</td>\n",
-       "      <td>0,655</td>\n",
-       "      <td>0,53</td>\n",
-       "      <td>0,322</td>\n",
-       "      <td>0,398</td>\n",
-       "      <td>0,322</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.912</td>\n",
+       "      <td>5.00736</td>\n",
+       "      <td>3.912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES0021000000472013PG0P</td>\n",
-       "      <td>16/01/2017</td>\n",
+       "      <td>ES0021000004654210GL</td>\n",
+       "      <td>0P</td>\n",
+       "      <td>2017-01-01</td>\n",
        "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0,339</td>\n",
-       "      <td>0,417</td>\n",
-       "      <td>0,339</td>\n",
-       "      <td>0,316</td>\n",
-       "      <td>0,389</td>\n",
-       "      <td>0,316</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.839</td>\n",
+       "      <td>4.91392</td>\n",
+       "      <td>3.839</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  Month                 CUPS 22         DAY  HOUR  SEASON  VALUE  \\\n",
-       "0  2017      1  ES0021000000472013PG0P  16/01/2017     1       0  0,269   \n",
-       "1  2017      1  ES0021000000472013PG0P  16/01/2017     2       0  0,506   \n",
-       "2  2017      1  ES0021000000472013PG0P  16/01/2017     3       0   0,35   \n",
-       "3  2017      1  ES0021000000472013PG0P  16/01/2017     4       0   0,53   \n",
-       "4  2017      1  ES0021000000472013PG0P  16/01/2017     5       0  0,339   \n",
+       "             --Cups20-- --Line--  --Fecha--  --Hora--  --Active--  \\\n",
+       "0  ES0021000004654210GL       0P 2017-01-01         1       4.085   \n",
+       "1  ES0021000004654210GL       0P 2017-01-01         2       3.757   \n",
+       "2  ES0021000004654210GL       0P 2017-01-01         3       3.930   \n",
+       "3  ES0021000004654210GL       0P 2017-01-01         4       3.912   \n",
+       "4  ES0021000004654210GL       0P 2017-01-01         5       3.839   \n",
        "\n",
-       "  TRANSP LOSS VALUE TRANSF LOSS VALUE FORECAST VALUE  \\\n",
-       "0             0,342             0,269          0,492   \n",
-       "1             0,637             0,506          0,391   \n",
-       "2             0,436              0,35          0,343   \n",
-       "3             0,655              0,53          0,322   \n",
-       "4             0,417             0,339          0,316   \n",
-       "\n",
-       "  FORECAST TRANSP LOSS VALUE FORECASTE TRANSF LOSS VALUE  PRIORITY  \n",
-       "0                      0,625                       0,492         1  \n",
-       "1                      0,493                       0,391         1  \n",
-       "2                      0,427                       0,343         1  \n",
-       "3                      0,398                       0,322         1  \n",
-       "4                      0,389                       0,316         1  "
+       "   --Active With Transport Loss--  --Active With Transform Loss--  \n",
+       "0                         5.22472                           4.085  \n",
+       "1                         4.80896                           3.757  \n",
+       "2                         5.03040                           3.930  \n",
+       "3                         5.00736                           3.912  \n",
+       "4                         4.91392                           3.839  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Mi excel tiene varias pestañas, tengo que leerlas todas\n",
     "# Para leer  el csv con las medidas\n",
-    "df = pd.read_csv('./data/Mejor_Medida.csv', sep=';')\n",
-    "df.head(5)"
+    "df_2017 = pd.read_excel('./data/Cups2017.xlsx', sep=';')\n",
+    "df_2017.head(5)"
    ]
   },
   {
@@ -833,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
