--- a/Tratamiento temperaturas.ipynb
+++ b/Tratamiento temperaturas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "4 2017-01-11 07:00:00                      Badajoz-Badajoz         5,0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "4 2017-01-11 07:00:00                      Badajoz-Badajoz            5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "4 2017-01-11 07:00:00                      Badajoz-Badajoz            5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "max       21.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "4 2017-01-11 07:00:00                      Badajoz-Badajoz            5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,16 +704,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x106187ef0>]"
+       "[<matplotlib.lines.Line2D at 0x118985320>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "4   Badajoz  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "9      9  Albacete 2017-01-11 16:00:00          9.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Temperaturas.drop('index', 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Temperatura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Albacete</td>\n",
+       "      <td>2017-01-11 07:00:00</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albacete</td>\n",
+       "      <td>2017-01-11 08:00:00</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albacete</td>\n",
+       "      <td>2017-01-11 09:00:00</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Albacete</td>\n",
+       "      <td>2017-01-11 10:00:00</td>\n",
+       "      <td>5.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Albacete</td>\n",
+       "      <td>2017-01-11 11:00:00</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Provincia               Fecha  Temperatura\n",
+       "0  Albacete 2017-01-11 07:00:00          3.5\n",
+       "1  Albacete 2017-01-11 08:00:00          4.0\n",
+       "2  Albacete 2017-01-11 09:00:00          4.5\n",
+       "3  Albacete 2017-01-11 10:00:00          5.5\n",
+       "4  Albacete 2017-01-11 11:00:00          7.0"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Temperaturas.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1177,7 @@
        "4  Barcelona              Cataluña"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1213,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>Provincia</th>\n",
        "      <th>Fecha</th>\n",
        "      <th>Temperatura</th>\n",
@@ -1130,7 +1222,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Albacete</td>\n",
        "      <td>2017-01-11 07:00:00</td>\n",
        "      <td>3.5</td>\n",
@@ -1138,7 +1229,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Albacete</td>\n",
        "      <td>2017-01-11 08:00:00</td>\n",
        "      <td>4.0</td>\n",
@@ -1146,7 +1236,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Albacete</td>\n",
        "      <td>2017-01-11 09:00:00</td>\n",
        "      <td>4.5</td>\n",
@@ -1154,7 +1243,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Albacete</td>\n",
        "      <td>2017-01-11 10:00:00</td>\n",
        "      <td>5.5</td>\n",
@@ -1162,7 +1250,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Albacete</td>\n",
        "      <td>2017-01-11 11:00:00</td>\n",
        "      <td>7.0</td>\n",
@@ -1173,15 +1260,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   index Provincia               Fecha  Temperatura           Comunidad\n",
-       "0      0  Albacete 2017-01-11 07:00:00          3.5  Castilla la Mancha\n",
-       "1      1  Albacete 2017-01-11 08:00:00          4.0  Castilla la Mancha\n",
-       "2      2  Albacete 2017-01-11 09:00:00          4.5  Castilla la Mancha\n",
-       "3      3  Albacete 2017-01-11 10:00:00          5.5  Castilla la Mancha\n",
-       "4      4  Albacete 2017-01-11 11:00:00          7.0  Castilla la Mancha"
+       "  Provincia               Fecha  Temperatura           Comunidad\n",
+       "0  Albacete 2017-01-11 07:00:00          3.5  Castilla la Mancha\n",
+       "1  Albacete 2017-01-11 08:00:00          4.0  Castilla la Mancha\n",
+       "2  Albacete 2017-01-11 09:00:00          4.5  Castilla la Mancha\n",
+       "3  Albacete 2017-01-11 10:00:00          5.5  Castilla la Mancha\n",
+       "4  Albacete 2017-01-11 11:00:00          7.0  Castilla la Mancha"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,16 +1280,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x117b564e0>]"
+       "[<matplotlib.lines.Line2D at 0x1187cdb00>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1223,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
