--- a/Temperaturas_SGE.ipynb
+++ b/Temperaturas_SGE.ipynb
@@ -1,15 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instalo las librerías necesarias"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LIBRERIAS NECESARIAS\n",
-    "\n",
     "import pandas as pd\n",
     "import pyodbc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Me conecto a la BBDD\n",
+    "\n",
+    "Esto no es reproducible ya que es una BBDD de mi trabajo"
    ]
   },
   {
@@ -18,8 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# FUNCIONES PARA CONECTAR A BBDD\n",
-    "\n",
     "def connect_to_SGE():\n",
     "    conn = pyodbc.connect(r'DRIVER={SQL Server Native Client 11.0};'\n",
     "                          r'SERVER=62.93.187.183;'\n",
@@ -37,15 +49,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defino tanto las fechas para la que quiero realizar la consulta como la ruta donde quiero que me deje el fichero de temperaturas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# VARIABLES INICIALEs\n",
-    "\n",
     "fecha_ini, fecha_fin = '20161231', '20170131'\n",
     "ruta = r'C:\\Users\\guadguer\\Notebook\\Temperaturas\\\\'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta BBDD tiene tanto medidas de temperaturas reales como temperaturas previstas a futuro, en el notebook tengo tanto la opción de apuntar a la tabla de previsiones como a la de medidas reales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para descargar previsiones"
    ]
   },
   {
@@ -129,8 +160,6 @@
     }
    ],
    "source": [
-    "# PREVISIONES\n",
-    "\n",
     "sql_prevs = \"\"\"select Fecha\n",
     "                      , Localidad\n",
     "                      , Temperatura\n",
@@ -140,17 +169,17 @@
     "\n",
     "prevs = simple_query(sql_prevs)\n",
     "\n",
-    "# Si quieres agrupar datos medios para TODA la península\n",
-    "# peninsula = prevs.groupby('Fecha').mean()\n",
-    "\n",
-    "# Si quieres datos para una localidad en concreto\n",
-    "# provincia = 'Valencia'\n",
-    "# prov = prevs[prevs['Localidad'].str.contains(provincia)]\n",
-    "\n",
     "nombre = 'prevs_temp_{0}_{1}.csv'.format(fecha_ini, fecha_fin)\n",
     "prevs.to_csv(ruta + nombre, encoding='latin1', sep=';', decimal=',', index=False)\n",
     "\n",
     "prevs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para descargar medidas realaes"
    ]
   },
   {
@@ -234,8 +263,6 @@
     }
    ],
    "source": [
-    "# MEDIDAS\n",
-    "\n",
     "sql_temps = \"\"\"select Fecha\n",
     "                      , Localidad\n",
     "                      , Temperatura\n",
@@ -251,15 +278,6 @@
     "\n",
     "temps.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
