--- a/Temperaturas_SGE.ipynb
+++ b/Temperaturas_SGE.ipynb
@@ -278,6 +278,13 @@
     "\n",
     "temps.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los datos de temperaturas descargados estan en la carpeta data con los nombres 'medidas_temp_2017.csv' y 'medidas_temp_2018.csv'"
+   ]
   }
  ],
  "metadata": {
